--- a/run/docker-compose.yml
+++ b/run/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=password
     volumes:
-      - ./nemaki-couchdb/data:/opt/couchdb/data
       - ./nemaki-couchdb/local.ini:/opt/couchdb/etc/local.ini
   nemaki-ui:
     image: tomcat:9.0-jre8-alpine
     volumes:
-      - ./war-files/ui.war:/usr/local/tomcat/webapps/ui.war
+      - ../war-files/ui.war:/usr/local/tomcat/webapps/ui.war
       - ./nemaki-ui/classes:/usr/local/tomcat/shared/classes
       - ./tomcat/bin/setenv.bat:/usr/local/tomcat/bin/setenv.bat
       - ./tomcat/bin/setenv.sh:/usr/local/tomcat/bin/setenv.sh
@@ -24,7 +23,7 @@ services:
   nemaki-core:
     image: tomcat:9.0-jre8-alpine
     volumes:
-      - ./war-files/core.war:/usr/local/tomcat/webapps/core.war
+      - ../war-files/core.war:/usr/local/tomcat/webapps/core.war
       - ./nemaki-core/classes:/usr/local/tomcat/shared/classes
       - ./tomcat/bin/setenv.bat:/usr/local/tomcat/bin/setenv.bat
       - ./tomcat/bin/setenv.sh:/usr/local/tomcat/bin/setenv.sh
@@ -34,7 +33,7 @@ services:
   nemaki-solr:
     image: tomcat:9.0-jre8-alpine
     volumes:
-      - ./war-files/solr.war:/usr/local/tomcat/webapps/solr.war
+      - ../war-files/solr.war:/usr/local/tomcat/webapps/solr.war
       - ./nemaki-solr/classes:/usr/local/tomcat/shared/classes
       - ./tomcat/bin/setenv.bat:/usr/local/tomcat/bin/setenv.bat
       - ./tomcat/bin/setenv.sh:/usr/local/tomcat/bin/setenv.sh
